--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,8 +3,8 @@ server:
 
 spring:
   datasource:
-    username: crowdos
-    password: crowdos
+    username: root
+    password: 130324yhc
     url: jdbc:mysql://localhost:3306/crowdsharing_db?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
