--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -3,8 +3,10 @@ server:
 
 spring:
   datasource:
-    username: root
-    password: 130324yhc
+#    username: root
+#    password: 130324yhc
+    username: crowdos
+    password: crowdos
     url: jdbc:mysql://localhost:3306/crowdsharing_db?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
